# playground

./: README.md
aod-driver/: .gitignore  README.md  pyproject.toml
aod-driver/src/aod/: main.py
camera-hypothesis-tests/: README.md  pyproject.toml
camera-hypothesis-tests/notebooks/: main.ipynb
cg4o/: Cargo.toml
cg4o/src/: lib.rs
cg4o/src/math/: mod.rs
cg4o/src/math/vec3/: mod.rs
cg4o/src/primitives/: mod.rs
curves/: README.md  cubic-bézier-2d.py  pyproject.toml
disruptor-lite/: README.md  pyproject.toml
disruptor-lite/src/disrupt/: main.py
holoproc/: pyproject.toml
holoproc/src/holoproc/: __init__.py  core.py  main.py  sideband_processing.py  temporal_unwrapping.py
lenses/: .gitignore  README.md  pyproject.toml
lenses/src/ezray/: __init__.py  paraxial_model.py
lenses/src/ezray/api/: optical_system.py
lenses/src/ezray/core/: general_ray_tracing.py  optical_system.py  paraxial_ray_tracing.py  ray_tracing.py  system_builder.py
lenses/src/ezray/examples/: __init__.py  convexplano.py  convexplano_lens _obj_space_telecentric.py  convexplano_lens.py  object_space_telecentric_lens.py
lenses/src/ezray/models/: paraxial_model.py  sequential_model.py
lenses/src/ezray/specs/: __init__.py  aperture.py  fields.py  gaps.py  surfaces.py
lenses/src/lenses/: paraxial_model.py
lenses/tests/: test_paraxial_model.py
lenses/tests/api/: test_optical_system.py
lenses/tests/core/: test_general_ray_tracing.py  test_paraxial_ray_tracing.py  test_ray_tracing.py
lenses/tests/examples/: test_convexplano_lens.py  test_object_space_telecentric_lens.py
lenses/tests/models/: test_paraxial_model.py  test_paraxial_model_utils.py  test_sequential_model.py
lenses/tests/specs/: test_fields.py
lenses/tests/validation/: test_convexplano_lens.py
microscopy/dpm/: README.md  pyproject.toml
microscopy/dpm/src/kmdouglass/: design.py  dpm_design.py
microscopy/dpm/templates/: design.html
nav-bar/: index.html
newton-raphson/: README.md  pyproject.toml
newton-raphson/src/nr/: main.py
newton_raphson_example/: main.py  pyproject.toml
optiland/: bug_report.py  concave_mirror.py  example.py
ray-transfer-matrices/: README.md  pyproject.toml
ray-transfer-matrices/src/rtm/: main.py
reactive-pymmcore-plus/: .gitignore  pyproject.toml
reactive-pymmcore-plus/src/reaqt/: main.py
reactive-ui-vanilla-js/: README.md  index.html  index.js
responsive-css-grid/: README.md  index.html  styles.css
rust-plugin-dependencies/: Cargo.toml  README.md
rust-plugin-dependencies/src/: main.rs
scripts/: parabolas.py  plane_quadric_intersections.py  read_noise.py  rotation_matrices.py
slm-alignment/: README.md  pyproject.toml
slm-alignment/src/slm/: __init__.py  alignment.py  core.py  main.py  phase_ring.py
spot-diagram/: README.md  spot_diagram.py
wasm-threads-bundler/: .gitignore  README.md
wasm-threads-bundler/wasm-app/: Cargo.toml
wasm-threads-bundler/wasm-app/src/: lib.rs
wasm-threads-bundler/www/: index.html  index.js  package.json  worker.js
