[tool.poetry]
name = "rtm"
version = "0.1.0"
description = "Ray transfer matrices for paraxial optical systems"
authors = ["Kyle M. Douglass <kyle.m.douglass@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "rtm", from = "src" }
]

[tool.poetry.scripts]
rtm = "rtm.main:main"

[tool.poetry.dependencies]
python = "^3.11"
sympy = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
